# EventManagement_CPP

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
database/: eventdb.sql  schema.sql
frontend/: app.js  index.html  style.css
